crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__ancestors_error_.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&ancestors_error"
---
NotFound {
    code: "",
    system: Icd10Cm,
}
