crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__ancestors_error_X999.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&ancestors_error"
---
NotFound {
    code: "X999",
    system: Icd10Cm,
}
