crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__error_data.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&data"
---
Data {
    message: "Failed to parse data",
}
