crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__error_hierarchy.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&hierarchy"
---
Hierarchy {
    message: "Cycle detected in hierarchy",
}
