crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__error_invalid_format.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&invalid_format"
---
InvalidFormat {
    code: "I.10.9",
    system: Icd10Cm,
}
