crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__error_no_mapping.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&no_mapping"
---
NoMapping {
    code: "I109",
    source_system: Icd10Cm,
    target_system: Ccsr,
}
