crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__error_not_found.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&not_found"
---
NotFound {
    code: "I109",
    system: Icd10Cm,
}
