crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__forward_error_.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&forward_error"
---
NotFound {
    code: "",
    system: Icd10Cm,
}
