crates/medcodes/tests/snapshots/snapshot_tests__snapshot_tests__forward_error_A.snap
---
source: crates/medcodes/tests/snapshot_tests.rs
expression: "&forward_error"
---
NotFound {
    code: "A",
    system: Icd10Cm,
}
